# snappy

./: .gitignore  Makefile.am  autogen.sh  configure.ac  snap.cc  snappy-stream.cc  snappy-stream.h  sncat  unsnap
debian/: changelog  control  copyright  libsnappy-dev.install  libsnappy1.install  libsnappystream-dev.install  libsnappystream.install  rules  snap.install
